Cycles crash deleting (all) geometry in editmode [no bvh rebuild, tries to refit bvh instead] #74095

Closed
opened 2020-02-22 01:57:54 +01:00 by Salvador Garcia · 12 comments

System Information
Operating system: Windows-10-10.0.17134-SP0 64 Bits
Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.83 (sub 4), branch: master, commit date: 2020-02-17 17:52, hash: 37cdfac6b9
Worked: (optional)

Short description of error
Blender crashes when delete all faces from an object during the rendered mode is active in Cycles

Exact steps for others to reproduce the error

  1. Select Render Cycles Engine
  2. switch to Rendered mode
  3. from default cube select all faces and
  4. Delete only faces
  5. BUM!!!
**System Information** Operating system: Windows-10-10.0.17134-SP0 64 Bits Graphics card: GeForce GTX 1050 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.83 (sub 4), branch: master, commit date: 2020-02-17 17:52, hash: `37cdfac6b9` Worked: (optional) **Short description of error** Blender crashes when delete all faces from an object during the rendered mode is active in Cycles **Exact steps for others to reproduce the error** 1. Select Render Cycles Engine 2. switch to Rendered mode 3. from default cube select all faces and 4. Delete only faces 5. BUM!!!

Added subscriber: @seviscache

Added subscriber: @seviscache

#74161 was marked as duplicate of this issue

#74161 was marked as duplicate of this issue

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

On assert(i < datasize_);
datasize_ was 0

>	blender.exe!ccl::array<int,16>::operator[](unsigned __int64 i) Line 212	C++

 	blender.exe!ccl::Mesh::get_triangle(unsigned __int64 i) Line 85	C++
 	blender.exe!ccl::BVH::pack_triangle(int idx, ccl::float4 * tri_verts) Line 286	C++
 	blender.exe!ccl::BVH::pack_primitives() Line 323	C++
 	blender.exe!ccl::BVH::refit(ccl::Progress & progress) Line 202	C++
 	blender.exe!ccl::Geometry::compute_bvh(ccl::Device * device, ccl::DeviceScene * dscene, ccl::SceneParams * params, ccl::Progress * progress, int n, int total) Line 203	C++
 	[Externí kód]	
 	blender.exe!ccl::TaskPool::wait_work(ccl::TaskPool::Summary * stats) Line 101	C++
 	blender.exe!ccl::GeometryManager::device_update(ccl::Device * device, ccl::DeviceScene * dscene, ccl::Scene * scene, ccl::Progress & progress) Line 1374	C++
 	blender.exe!ccl::Scene::device_update(ccl::Device * device_, ccl::Progress & progress) Line 240	C++
 	blender.exe!ccl::Session::update_scene() Line 1007	C++
 	blender.exe!ccl::Session::run_cpu() Line 679	C++
 	blender.exe!ccl::Session::run() Line 859	C++
 	[Externí kód]	
 	blender.exe!ccl::thread::run(void * arg) Line 53	C++
 	[Externí kód]	
On `assert(i < datasize_);` `datasize_` was 0 ``` > blender.exe!ccl::array<int,16>::operator[](unsigned __int64 i) Line 212 C++ blender.exe!ccl::Mesh::get_triangle(unsigned __int64 i) Line 85 C++ blender.exe!ccl::BVH::pack_triangle(int idx, ccl::float4 * tri_verts) Line 286 C++ blender.exe!ccl::BVH::pack_primitives() Line 323 C++ blender.exe!ccl::BVH::refit(ccl::Progress & progress) Line 202 C++ blender.exe!ccl::Geometry::compute_bvh(ccl::Device * device, ccl::DeviceScene * dscene, ccl::SceneParams * params, ccl::Progress * progress, int n, int total) Line 203 C++ [Externí kód] blender.exe!ccl::TaskPool::wait_work(ccl::TaskPool::Summary * stats) Line 101 C++ blender.exe!ccl::GeometryManager::device_update(ccl::Device * device, ccl::DeviceScene * dscene, ccl::Scene * scene, ccl::Progress & progress) Line 1374 C++ blender.exe!ccl::Scene::device_update(ccl::Device * device_, ccl::Progress & progress) Line 240 C++ blender.exe!ccl::Session::update_scene() Line 1007 C++ blender.exe!ccl::Session::run_cpu() Line 679 C++ blender.exe!ccl::Session::run() Line 859 C++ [Externí kód] blender.exe!ccl::thread::run(void * arg) Line 53 C++ [Externí kód] ```
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Looks like Cycles goes into Refitting BVH instead of Building BVH, checking...

Looks like Cycles goes into `Refitting BVH` instead of `Building BVH`, checking...
Philipp Oeser changed title from Delete only faces in cycles rendered not working to Cycles crash deleting (all) geometry in editmode [no bvh rebuild, tries to refit bvh instead] 2020-02-25 10:04:20 +01:00
Member

Added subscriber: @MarcinTwarowski

Added subscriber: @MarcinTwarowski
Member

Caused by 47402dcb91

Caused by 47402dcb91

This issue was referenced by blender/cycles@f497ebc508

This issue was referenced by blender/cycles@f497ebc50865237f9e4326de7c40c4db4bfa43cb

This issue was referenced by 7463da6c72

This issue was referenced by 7463da6c72a0fb2bc72bda53ece27670d5af2c72

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-02-25 12:01:06 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74095
No description provided.