Fix T74095: crash deleting all faces in edit mode with Cycles rendering